--- a/app/src/main/res/layout/activity_artist_details.xml
+++ b/app/src/main/res/layout/activity_artist_details.xml
@@ -1,129 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    android:id="@+id/myCoordinatorLayout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    <data>
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+        <variable
+            name="viewModel"
+            type="com.lastfm.musicapp.viewModel.ArtistDetailsViewModel" />
+
+        <import type="android.view.View" />
+
+    </data>
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/myCoordinatorLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:gravity="start"
-                android:paddingHorizontal="10dp">
+                android:gravity="center"
+                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity=""
-                    android:gravity="end"
-                    android:text="Artist Name :"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/artist_name"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:layout_marginLeft="5dp"
+                    android:layout_margin="10dp"
                     android:gravity="start"
-                    android:textStyle="bold" />
+                    android:paddingHorizontal="10dp">
 
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity=""
+                        android:gravity="end"
+                        android:text="PlayCount :"
+                        android:textSize="16sp" />
 
-             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:gravity="start"
-                android:paddingHorizontal="10dp">
+                    <TextView
+                        android:id="@+id/play_count"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:gravity="start"
+                        android:text="@{viewModel.artistsPlayCount.toString()}"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity=""
-                    android:gravity="end"
-                    android:text="PlayCount :"
-                    android:textSize="16sp" />
+                </LinearLayout>
 
-                <TextView
-                    android:id="@+id/play_count"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:layout_marginLeft="5dp"
+                    android:layout_margin="10dp"
                     android:gravity="start"
-                    android:textStyle="bold" />
+                    android:paddingHorizontal="10dp">
 
-             </LinearLayout>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:gravity="center"
+                        android:text="About "
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:gravity="start"
-                android:paddingHorizontal="10dp">
+                </LinearLayout>
 
-                <TextView
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:gravity="center"
-                    android:textColor="@color/black"
-                    android:text="About "
-                    android:textSize="16sp" />
+                    android:layout_margin="5dp"
+                    android:gravity="start"
+                    android:paddingHorizontal="10dp">
+
+                    <TextView
+                        android:id="@+id/artist_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
+                        android:gravity="center"
+                        android:text="@{viewModel.artistsSummary}"
+                        android:textColor="@color/purple_500"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:gravity="start"
-                android:paddingHorizontal="10dp">
-
-                <TextView
-                    android:id="@+id/artist_info"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textColor="@color/purple_500"
-                    android:textSize="20sp"
-                    android:layout_margin="15dp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:visibility="@{viewModel.progressBar ? View.VISIBLE : View.GONE}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </LinearLayout>
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-</LinearLayout>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</layout>
 
 
 
