--- a/app/src/main/res/layout/list_artist.xml
+++ b/app/src/main/res/layout/list_artist.xml
@@ -1,58 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+
+        <variable
+            name="topArtist"
+            type="com.lastfm.musicapp.model.TopArtist" />
+
+        <import type="android.view.View" />
+
+    </data>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp">
+        android:orientation="vertical">
 
-        <RelativeLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
 
-            <ImageView
-                android:id="@+id/artist_image"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_margin="10dp" />
-
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="2dp"
-                android:layout_toEndOf="@id/artist_image"
-                android:layout_toRightOf="@id/artist_image"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="4dp">
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/artist_name"
-                android:layout_margin="5dp"
-                android:textSize="15sp"
-                android:text="Title : "/>
+                <ImageView
+                    android:id="@+id/artist_image"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="10dp" />
 
-            <TextView
-                android:layout_below="@+id/artist_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/listerners"
-                android:layout_margin="5dp"
-                android:text="OverView : "/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_toEndOf="@id/artist_image"
+                    android:layout_toRightOf="@id/artist_image"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="4dp">
 
-            </LinearLayout>
+                    <TextView
+                        android:id="@+id/artist_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:text="Title : "
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/listerners"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/artist_name"
+                        android:layout_margin="5dp"
+                        android:text="OverView : " />
+
+                </LinearLayout>
 
 
-        </RelativeLayout>
+            </RelativeLayout>
 
-    </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-</RelativeLayout>
+    </RelativeLayout>
+
+</layout>
